--- a/css/main.css
+++ b/css/main.css
@@ -142,6 +142,13 @@ ul {
   text-align: start;
 }
 
+.modal-input-icon {
+  position: absolute;
+  top: 20%;
+  left: 15px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .modal-input {
   width: 100%;
   height: 40px;
@@ -178,13 +185,6 @@ ul {
   position: relative;
 }
 
-.modal-input-icon {
-  position: absolute;
-  top: 20%;
-  left: 15px;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .check-text {
   font-size: 14px;
   line-height: 1.2;
@@ -210,13 +210,13 @@ ul {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.input-icon-check {
-  fill: var(--color-light);
-}
-
 .input-check:checked + .check-text span {
   background-color: var(--special-color);
   border: none;
+}
+
+.input-icon-check {
+  fill: var(--color-light);
 }
 
 .form__btn-contact {
@@ -248,11 +248,7 @@ ul {
 .header__site-nav {
   display: flex;
   align-items: center;
-}
-
-.header__contact {
-  display: flex;
-  align-items: center;
+  margin-right: 295px;
 }
 
 .header__site-nav .list:first-child {
@@ -263,8 +259,14 @@ ul {
   margin-right: 50px;
 }
 
-.header__site-nav {
-  margin-right: 295px;
+.header__contact {
+  display: flex;
+  align-items: center;
+}
+
+.header__contact .link:hover,
+.header__contact .link:focus {
+  color: var(--special-color);
 }
 
 .logo {
@@ -310,13 +312,7 @@ ul {
   padding-bottom: 25px;
 }
 
-.header__site-nav .link:hover,
-.header__site-nav .link:focus {
-  color: var(--special-color);
-}
-
-.header__contact .link:hover,
-.header__contact .link:focus {
+.header__site-nav .link:hover, .header__site-nav .link:focus {
   color: var(--special-color);
 }
 
@@ -426,8 +422,7 @@ ul {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.btn__nav:hover,
-.btn__nav:focus {
+.btn__nav:hover, .btn__nav:focus {
   background-color: var(--special-color);
   border: none;
   color: var(--color-light);
@@ -449,6 +444,14 @@ ul {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.main__information-project-item:hover {
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.main__information-project-item:hover .main__information-project-item-text {
+  transform: translateY(0%);
+}
+
 .main__information-project-item-card {
   position: relative;
   overflow: hidden;
@@ -468,14 +471,6 @@ ul {
   background-color: rgba(33, 150, 243, 0.9);
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.main__information-project-item:hover .main__information-project-item-text {
-  transform: translateY(0%);
-}
-
-.main__information-project-item:hover {
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .main__information-project-item-border {
@@ -560,6 +555,10 @@ ul {
   display: flex;
 }
 
+.main__information-photo-img .list:not(:last-child) {
+  margin-right: 30px;
+}
+
 .main__information-photo-img-box {
   position: relative;
 }
@@ -581,10 +580,6 @@ ul {
   text-transform: uppercase;
 }
 
-.main__information-photo-img .list:not(:last-child) {
-  margin-right: 30px;
-}
-
 .main__information-teachers {
   background-color: var(--color-background);
 }
@@ -602,7 +597,7 @@ ul {
   margin-right: 30px;
 }
 
-.teachers-socials-list {
+.main__information-teachers-photo .teachers-socials-list {
   display: flex;
   justify-content: center;
   margin-top: 16px;
@@ -618,7 +613,7 @@ ul {
   margin-right: 0;
 }
 
-.teachers-socials-link {
+.teachers-socials-item .teachers-socials-link {
   width: 100%;
   height: 100%;
   border-radius: 50%;
@@ -629,14 +624,13 @@ ul {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.teachers-socials-icon {
-  fill: currentColor;
-}
-
-.teachers-socials-link:hover,
-.teachers-socials-link:focus {
+.teachers-socials-item .teachers-socials-link:hover, .teachers-socials-item .teachers-socials-link:focus {
   background-color: var(--special-color);
   color: var(--color-light);
+}
+
+.teachers-socials-icon {
+  fill: currentColor;
 }
 
 .block {
@@ -698,8 +692,7 @@ ul {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.clients-socials-link:hover,
-.clients-socials-link:focus {
+.clients-socials-link:hover, .clients-socials-link:focus {
   fill: var(--special-color);
   border: solid 1px var(--special-color);
 }
@@ -785,15 +778,14 @@ ul {
   color: #ffffff;
 }
 
+.footer-socials-link:hover, .footer-socials-link:focus {
+  background-color: var(--special-color);
+}
+
 .footer-socials-icon {
   width: 20px;
   height: 20px;
   fill: currentColor;
-}
-
-.footer-socials-link:hover,
-.footer-socials-link:focus {
-  background-color: var(--special-color);
 }
 
 .footer-email-title {
