--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -37,10 +37,9 @@
   top: 8px;
   padding: 6px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-btn:hover {
-  fill: var(--special-color);
+  &:hover {
+    fill: var(--special-color);
+  }
 }
 
 .modal-title {
@@ -63,7 +62,12 @@
   color: var(--color-contact);
   text-align: start;
 }
-
+.modal-input-icon {
+  position: absolute;
+  top: 20%;
+  left: 15px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .modal-input {
   width: 100%;
   height: 40px;
@@ -74,13 +78,12 @@
   outline: none;
   margin-bottom: 10px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-input:focus {
-  border-color: var(--special-color);
-}
-
-.modal-input:focus + .modal-input-icon {
-  fill: var(--special-color);
+  &:focus {
+    border-color: var(--special-color);
+  }
+  &:focus + .modal-input-icon {
+    fill: var(--special-color);
+  }
 }
 
 .modal-text {
@@ -99,13 +102,6 @@
   position: relative;
 }
 
-.modal-input-icon {
-  position: absolute;
-  top: 20%;
-  left: 15px;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .check-text {
   font-size: 14px;
   line-height: 1.2;
@@ -119,25 +115,27 @@
   margin-left: 5px;
 }
 
-.check-text span {
-  width: 16px;
-  height: 15px;
-  border: 2px solid var(--primary-text-color);
-  border-radius: 2px;
-  margin-right: 9px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.check-text {
+  span {
+    width: 16px;
+    height: 15px;
+    border: 2px solid var(--primary-text-color);
+    border-radius: 2px;
+    margin-right: 9px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    .input-check:checked + & {
+      background-color: var(--special-color);
+      border: none;
+    }
+  }
 }
 
 .input-icon-check {
   fill: var(--color-light);
-}
-.input-check:checked + .check-text span {
-  background-color: var(--special-color);
-  border: none;
 }
 
 .form__btn-contact {
