--- a/scss/layout/_clients.scss
+++ b/scss/layout/_clients.scss
@@ -11,10 +11,11 @@
 }
 .clients-socials-item {
   margin-right: 30px;
+  &:last-child {
+    margin-right: 0;
+  }
 }
-.clients-socials-item:last-child {
-  margin-right: 0;
-}
+
 .clients-socials-link {
   display: flex;
   justify-content: center;
@@ -25,9 +26,9 @@
   border-radius: 4px;
   fill: var(--color-teachers-social);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.clients-socials-link:hover,
-.clients-socials-link:focus {
-  fill: var(--special-color);
-  border: solid 1px var(--special-color);
+  &:hover,
+  &:focus {
+    fill: var(--special-color);
+    border: solid 1px var(--special-color);
+  }
 }
