--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -36,7 +36,7 @@
   color: var(--color-light);
   border: none;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.header__hero-btn:hover {
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  &:hover {
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  }
 }
