--- a/scss/layout/_portfolio-nav.scss
+++ b/scss/layout/_portfolio-nav.scss
@@ -10,9 +10,9 @@
   display: flex;
   justify-content: center;
   margin-bottom: 50px;
-}
-.main__portfolio-nav .main__portfolio-nav-item:not(:last-child) {
-  margin-right: 8px;
+  .main__portfolio-nav-item:not(:last-child) {
+    margin-right: 8px;
+  }
 }
 .btn__nav {
   background: var(--color-background);
@@ -27,12 +27,12 @@
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.btn__nav:hover,
-.btn__nav:focus {
-  background-color: var(--special-color);
-  border: none;
-  color: var(--color-light);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+  &:hover,
+  &:focus {
+    background-color: var(--special-color);
+    border: none;
+    color: var(--color-light);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
 }
