--- a/scss/layout/_portfolio-projects.scss
+++ b/scss/layout/_portfolio-projects.scss
@@ -11,6 +11,13 @@
   margin-right: 30px;
   background: var(--color-light);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover {
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+    .main__information-project-item-text {
+      transform: translateY(0%);
+    }
+  }
 }
 
 .main__information-project-item-card {
@@ -32,13 +39,7 @@
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.main__information-project-item:hover .main__information-project-item-text {
-  transform: translateY(0%);
-}
-.main__information-project-item:hover {
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-}
+
 .main__information-project-item-border {
   border-left: 1px solid var(--color-border);
   border-right: 1px solid var(--color-border);
