--- a/scss/layout/_teachers.scss
+++ b/scss/layout/_teachers.scss
@@ -7,45 +7,45 @@
 }
 .main__information-teachers-photo {
   display: flex;
-}
-.main__information-teachers-photo .list:not(:last-child) {
-  margin-right: 30px;
-}
-.teachers-socials-list {
-  display: flex;
-  justify-content: center;
-  margin-top: 16px;
+  .list:not(:last-child) {
+    margin-right: 30px;
+  }
+  .teachers-socials-list {
+    display: flex;
+    justify-content: center;
+    margin-top: 16px;
+  }
 }
 
 .teachers-socials-item {
   width: 44px;
   height: 44px;
   margin-right: 10px;
+  &:last-child {
+    margin-right: 0;
+  }
+  .teachers-socials-link {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--color-teachers-social);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+      background-color: var(--special-color);
+      color: var(--color-light);
+    }
+  }
 }
 
-.teachers-socials-item:last-child {
-  margin-right: 0;
-}
-
-.teachers-socials-link {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: var(--color-teachers-social);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 .teachers-socials-icon {
   fill: currentColor;
 }
-.teachers-socials-link:hover,
-.teachers-socials-link:focus {
-  background-color: var(--special-color);
-  color: var(--color-light);
-}
+
 .block {
   background-color: var(--color-light);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
