--- a/scss/layout/_teachers.scss
+++ b/scss/layout/_teachers.scss
@@ -9,7 +9,7 @@
   .list:not(:last-child) {
     margin-right: 30px;
   }
-  .teachers-socials-list {
+  .teachers__socials-list {
     display: flex;
     justify-content: center;
     margin-top: 16px;
@@ -21,15 +21,25 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
-
-.teachers-socials-item {
+.teachers__item-names {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.teachers__item-names-title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.18;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+.teachers__socials-item {
   width: 44px;
   height: 44px;
   margin-right: 10px;
   &:last-child {
     margin-right: 0;
   }
-  .teachers-socials-link {
+  .teachers__socials-link {
     width: 100%;
     height: 100%;
     border-radius: 50%;
@@ -47,21 +57,10 @@
   }
 }
 
-.teachers-socials-icon {
+.teachers__socials-icon {
   fill: currentColor;
 }
 
-.workers {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.18;
-  text-align: center;
-  letter-spacing: 0.03em;
-}
-.workers-names-type {
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
 .grey.workers {
   text-align: center;
   font-weight: 400;
