--- a/scss/layout/_clients.scss
+++ b/scss/layout/_clients.scss
@@ -1,10 +1,10 @@
 .clients.section {
   padding-top: 94px;
   padding-bottom: 94px;
-  background-color: var(--color-details-info);
 }
 .clients__title {
   margin-bottom: 50px;
+  text-align: center;
 }
 .clients__socials-list {
   display: flex;
