--- a/css/main.css
+++ b/css/main.css
@@ -437,7 +437,7 @@ ul {
 }
 
 .main__information-project-item {
-  width: calc(100% / 3 -30px);
+  width: calc(100% / 3 - 30px);
   margin-bottom: 30px;
   margin-right: 30px;
   background: var(--color-light);
@@ -458,7 +458,7 @@ ul {
 }
 
 .main__information-project-item-text {
-  font-style: regular;
+  font-style: normal;
   font-size: 18px;
   line-height: calc(28 / 18);
   letter-spacing: 0.03em;
