--- a/scss/layout/_portfolio-projects.scss
+++ b/scss/layout/_portfolio-projects.scss
@@ -6,7 +6,7 @@
 }
 
 .main__information-project-item {
-  width: calc(100% / 3 -30px);
+  width: calc(100% / 3 - 30px);
   margin-bottom: 30px;
   margin-right: 30px;
   background: var(--color-light);
@@ -25,7 +25,7 @@
   overflow: hidden;
 }
 .main__information-project-item-text {
-  font-style: regular;
+  font-style: normal;
   font-size: 18px;
   line-height: calc(28 / 18);
   letter-spacing: 0.03em;
